--- a/index.html
+++ b/index.html
@@ -916,6 +916,9 @@
         if (value < 1e21) return 'pink';
         if (value < 1e24) return 'orange';
         if (value < 1e30) return 'linear-gradient(90deg, blue, purple)';
+        if (value < 1e33) return 'linear-gradient(45deg, pink, cyan)';
+        if (value < 1e36) return 'linear-gradient(0deg, red, black)';
+        if (value < 1e39) return 'linear-gradient(90deg, green, pink)';
         return 'linear-gradient(90deg, red, orange, yellow, green, cyan, blue, violet)';
       }
 
