--- a/index.html
+++ b/index.html
@@ -1303,7 +1303,7 @@
         else if (Math.random() < 1 / 8888 * specialLuckBonus) { 
           rank = "Imaginary"; 
           displayValue = "0.1i";
-          originalValue = 0.1i;
+          originalValue = 0.1;
           isSpecial = true;
           markDiscovered('specialRanks', 'Imaginary');
         }
