--- a/index.html
+++ b/index.html
@@ -1170,14 +1170,14 @@
 
         let base = Math.random();
         let skewed;
-        if (base < 0.5) skewed = 1 + Math.random() * 9;
-        else if (base < 0.75) skewed = 10 + Math.random() * 90;
-        else if (base < 0.90) skewed = 100 + Math.random() * 90;
-        else if (base < 0.97) skewed = 1000 + Math.random() * 9000;
-        else if (base < 0.99) skewed = 10000 + Math.random() * 90000;
-        else if (base < 0.997) skewed = 100000 + Math.random() * 900000;
-        else if (base < 0.9995) skewed = 1000000 + Math.random() * 9000000;
-        else skewed = 10000000 + Math.random() * 900000000;
+        if (base < 0.5) skewed = 1 + Math.random() * 18;
+        else if (base < 0.75) skewed = 10 + Math.random() * 180;
+        else if (base < 0.90) skewed = 100 + Math.random() * 1800;
+        else if (base < 0.97) skewed = 1000 + Math.random() * 18000;
+        else if (base < 0.99) skewed = 10000 + Math.random() * 180000;
+        else if (base < 0.997) skewed = 100000 + Math.random() * 1800000;
+        else if (base < 0.9995) skewed = 1000000 + Math.random() * 18000000;
+        else skewed = 10000000 + Math.random() * 1800000000;
 
         skewed = Math.max(1, skewed);
         if (Math.random() < 1 / 1000) skewed = -1;
