--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       }
 
       .game-container {
-        background: 'linear-gradient(90deg, pink, purple);
+        background: #2c2c2c;
         padding: 30px;
         border-radius: 15px;
         text-align: center;
