--- a/index.html
+++ b/index.html
@@ -886,6 +886,9 @@
         if (value < 1e36) return 'linear-gradient(0deg, red, black)';
         if (value < 1e39) return 'linear-gradient(90deg, green, pink)';
         if (value < 1e42) return 'linear-gradient(270deg, red, orange, yellow)';
+        if (value < 1e45) return 'linear-gradient(45deg, purple, white, cyan)';
+        if (value < 1e48) return 'linear-gradient(90deg, white, black, white, black, white, black)';
+        if (value < 1e51) return 'linear-gradiet(75deg, red, pink, red, pink)';
         return 'linear-gradient(90deg, red, orange, yellow, green, cyan, blue, violet)';
       }
 
