--- a/index.html
+++ b/index.html
@@ -881,14 +881,15 @@
         if (value < 1e18) return 'red';
         if (value < 1e21) return 'pink';
         if (value < 1e24) return 'orange';
-        if (value < 1e30) return 'linear-gradient(90deg, blue, purple)';
+        if (value < 1e30) return 'linear-gradient(90deg, green, white)';
         if (value < 1e33) return 'linear-gradient(45deg, pink, cyan)';
         if (value < 1e36) return 'linear-gradient(0deg, red, black)';
         if (value < 1e39) return 'linear-gradient(90deg, green, pink)';
         if (value < 1e42) return 'linear-gradient(270deg, red, orange, yellow)';
         if (value < 1e45) return 'linear-gradient(45deg, red, white, cyan)';
         if (value < 1e48) return 'linear-gradient(90deg, white, black, white, black, white, black)';
-        if (value < 1e51) return 'linear-gradiet(75deg, red, pink, red, pink)';
+        if (value < 1e51) return 'linear-gradient(75deg, red, pink, red, pink)';
+        if (value < 1e54) return 'linear-gradient(90deg, red, pink, white, pink, red)';
         return 'linear-gradient(90deg, red, orange, yellow, green, cyan, blue, violet)';
       }
 
