--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@
         let cooldown = 0;
         if (isSpecial && !noCooldownRanks.includes(rank)) {
           cooldown = 500;
-        } else if (absDisplayValue >= 1e45) {
+        } else if (absDisplayValue >= 1e48) {
           cooldown = 1500;
         }
 
@@ -1400,7 +1400,7 @@
         multiRolls = [];
         totalRolls++;
         saveShop();
-        const roll = rollOnce(250, 75, 50 * secretLuckBonus);
+        const roll = rollOnce(1o0, 100, 100 * secretLuckBonus);
         multiRolls.push(roll.inventoryData);
         
         let displayResult = roll.result.replace(/ROLLINDEX/g, '0').replace(/RANKBUTTON/g, roll.inventoryData ? 
