--- a/index.html
+++ b/index.html
@@ -1400,7 +1400,7 @@
         multiRolls = [];
         totalRolls++;
         saveShop();
-        const roll = rollOnce(1o0, 100, 100 * secretLuckBonus);
+        const roll = rollOnce(100, 100, 100 * secretLuckBonus);
         multiRolls.push(roll.inventoryData);
         
         let displayResult = roll.result.replace(/ROLLINDEX/g, '0').replace(/RANKBUTTON/g, roll.inventoryData ? 
