--- a/index.html
+++ b/index.html
@@ -1671,8 +1671,8 @@
           return { result: '<span class="bold" style="color: purple;">You rolled a/an RANKBUTTON (-777,777,777.78)!</span>', cooldown: 4500, inventoryData: invData };
         }
 
-        // Catastrophic 1/390625
-        if (Math.random() < (1 / 390625) * specialLuckBonus * luckMultiplier) {
+        // Catastrophic 1/3906250
+        if (Math.random() < (1 / 3906250) * specialLuckBonus * luckMultiplier) {
           isSpecial = true;
           markDiscovered('specialRanks', 'Catastrophic');
           const invData = {
@@ -1684,8 +1684,8 @@
           return { result: '<span class="bold" style="color: red;">You rolled a/an RANKBUTTON (-0.50)!</span>', cooldown: 3500, inventoryData: invData };
         }
 
-        // In im table ?!?!? 1/750k
-        if (Math.random() < (1 / 750000) * specialLuckBonus * luckMultiplier) {
+        // In im table ?!?!? 1/3.75m
+        if (Math.random() < (1 / 3750000) * specialLuckBonus * luckMultiplier) {
           isSpecial = true;
           markDiscovered('specialRanks', 'In im table ?!?!?');
           const invData = {
@@ -1854,7 +1854,7 @@
           isSpecial = true;
           markDiscovered('specialRanks', 'INSANE');
         }
-        else if (Math.random() < 1 / 1500 * specialLuckBonus * luckMultiplier) { 
+        else if (Math.random() < 1 / 150000 * specialLuckBonus * luckMultiplier) { 
           rank = 'Lmao'; 
           displayValue = 0.1;
           originalValue = 0.1;
@@ -1867,7 +1867,7 @@
           isSpecial = true;
           markDiscovered('specialRanks', 'PERFECTIONIST');
         }
-        else if (Math.random() < 1 / 8888 * specialLuckBonus * luckMultiplier) { 
+        else if (Math.random() < 1 / 88888 * specialLuckBonus * luckMultiplier) { 
           rank = "Imaginary"; 
           displayValue = "0.1i";
           originalValue = 0.1;
