--- a/index.html
+++ b/index.html
@@ -1594,7 +1594,7 @@
         }
 
         // RNGarbage 1/15,629,519
-        if (Math.random() < (1 / 15629519) * specialLuckBonus * luckMultiplier) {
+        if (Math.random() < (1 / 156295190) * specialLuckBonus * luckMultiplier) {
           isSpecial = true;
           markDiscovered('specialRanks', 'RNGarbage');
           const invData = {
@@ -1606,8 +1606,8 @@
           return { result: '<span class="bold" style="color: brown;">You rolled a/an RANKBUTTON (Bum..)!</span>', cooldown: 2500, inventoryData: invData };
         }
 
-        // RNGod 1/10,000,000
-        if (Math.random() < (1 / 10000000) * specialLuckBonus * luckMultiplier) {
+        // RNGod 1/50,000,000
+        if (Math.random() < (1 / 50000000) * specialLuckBonus * luckMultiplier) {
           isSpecial = true;
           markDiscovered('specialRanks', 'RNGod');
           const invData = {
@@ -1645,13 +1645,13 @@
           return { result: '<span class="bold" style="color: red;">You rolled a/an RANKBUTTON (1.0000e+9)!</span>', cooldown: 2500, inventoryData: invData };
         }
 
-        // Legacy FINALE 1/25,000,000
-        if (Math.random() < (1 / 25000000) * luckMultiplier * specialLuckBonus) {
+        // Legacy FINALE 1/75,000,000
+        if (Math.random() < (1 / 75000000) * luckMultiplier * specialLuckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'Legacy FINALE');
           const invData = {
             variants: '',
-            displayValue: '1.0000e+10',
+            displayValue: 'L1.0000e+10',
             rank: 'Legacy FINALE',
             color: 'gold'
           };
@@ -1659,7 +1659,7 @@
         }
 
         // <(ETERNAL DAWN)> 1/10,000,000
-        if (Math.random() < (1 / 10000000) * luckMultiplier * specialLuckBonus) {
+        if (Math.random() < (1 / 77777777) * luckMultiplier * specialLuckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', '<(ETERNAL DAWN)>');
           const invData = {
@@ -1672,7 +1672,7 @@
         }
 
         // Catastrophic 1/3906250
-        if (Math.random() < (1 / 3906250) * specialLuckBonus * luckMultiplier) {
+        if (Math.random() < (1 / 39062500) * specialLuckBonus * luckMultiplier) {
           isSpecial = true;
           markDiscovered('specialRanks', 'Catastrophic');
           const invData = {
@@ -1684,8 +1684,8 @@
           return { result: '<span class="bold" style="color: red;">You rolled a/an RANKBUTTON (-0.50)!</span>', cooldown: 3500, inventoryData: invData };
         }
 
-        // In im table ?!?!? 1/3.75m
-        if (Math.random() < (1 / 3750000) * specialLuckBonus * luckMultiplier) {
+        // In im table ?!?!? 1/37.5m
+        if (Math.random() < (1 / 37500000) * specialLuckBonus * luckMultiplier) {
           isSpecial = true;
           markDiscovered('specialRanks', 'In im table ?!?!?');
           const invData = {
@@ -1697,7 +1697,7 @@
           return { result: '<span class="bold">You rolled a/an RANKBUTTON (1einf)!</span>', cooldown: 2500, inventoryData: invData };
         }
 
-        // ???UNKNOWN??? 1/1234567 - NO COOLDOWN
+        // ???UNKNOWN??? 1/12345678 - NO COOLDOWN
         if (Math.random() < (1 / 12345678) * luckMultiplier * specialLuckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', '???UNKNOWN???');
@@ -1711,7 +1711,7 @@
         }
 
         // Invisible 1/5000000
-        if (Math.random() < (1 / 5000000) * specialLuckBonus * luckMultiplier) {
+        if (Math.random() < (1 / 50000000) * specialLuckBonus * luckMultiplier) {
           isSpecial = true;
           originalValue = Math.random() * 50000;
           markDiscovered('specialRanks', 'Invisible');
@@ -1892,14 +1892,14 @@
           rank = 'nothing';
           markDiscovered('ranks', 'nothing');
         }
-        else if (Math.random() < 1 / 690000 * specialLuckBonus * luckMultiplier) { 
+        else if (Math.random() < 1 / 6900000 * specialLuckBonus * luckMultiplier) { 
           rank = 'NICE';
           displayValue = 69;
           originalValue = 69;
           isSpecial = true;
           markDiscovered('specialRanks', 'NICE');
         }
-        else if (Math.random() < 1 / 6942000 * specialLuckBonus * luckMultiplier) { 
+        else if (Math.random() < 1 / 69420000 * specialLuckBonus * luckMultiplier) { 
           rank = 'FUNNY';
           displayValue = 69420;
           originalValue = 69420;
@@ -1907,7 +1907,7 @@
           markDiscovered('specialRanks', 'FUNNY');
         }
         else if (absBaseValue < 5) {
-          if (Math.random() < 1 / 333333 * specialLuckBonus * luckMultiplier) { 
+          if (Math.random() < 1 / 3333333 * specialLuckBonus * luckMultiplier) { 
             rank = 'Common : DIVINITY'; 
             displayValue *= 5e5;
             isSpecial = true;
@@ -1952,7 +1952,7 @@
         else if (absBaseValue < 1e150) { rank = 'what.'; markDiscovered('ranks', 'what.'); }
         else { rank = 'FINALE'; markDiscovered('ranks', 'FINALE'); }
 
-        if (Math.random() < (1 / 2763000) * luckMultiplier * specialLuckBonus) {
+        if (Math.random() < (1 / 27630000) * luckMultiplier * specialLuckBonus) {
           isSpecial = true;
           rank = 'leaflet';
           displayValue = 2763;
