--- a/index.html
+++ b/index.html
@@ -1597,7 +1597,7 @@
         }
 
         // RNGarbage 1/15,629,519
-        if (Math.random() < (1 / 15629519) * specialLuckBonus) {
+        if (Math.random() < (1 / 15629519) * specialluckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'RNGarbage');
           const invData = {
@@ -1610,7 +1610,7 @@
         }
 
         // RNGod 1/50,000,000
-        if (Math.random() < (1 / 1000000) * specialLuckBonus) {
+        if (Math.random() < (1 / 1000000) * specialluckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'RNGod');
           const invData = {
@@ -1649,7 +1649,7 @@
         }
 
         // Legacy FINALE 1/75,000,000
-        if (Math.random() < (1 / 75000000) * specialLuckBonus) {
+        if (Math.random() < (1 / 75000000) * specialluckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'Legacy FINALE');
           const invData = {
@@ -1662,7 +1662,7 @@
         }
 
         // <(ETERNAL DAWN)> 1/77,777,777
-        if (Math.random() < (1 / 77777777) * specialLuckBonus) {
+        if (Math.random() < (1 / 77777777) * specialluckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', '<(ETERNAL DAWN)>');
           const invData = {
@@ -1675,7 +1675,7 @@
         }
 
         // Catastrophic 1/3906250
-        if (Math.random() < (1 / 3906250) * specialLuckBonus) {
+        if (Math.random() < (1 / 3906250) * specialluckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'Catastrophic');
           const invData = {
@@ -1688,7 +1688,7 @@
         }
 
         // In im table ?!?!? 1/3.75m
-        if (Math.random() < (1 / 3750000) * specialLuckBonus) {
+        if (Math.random() < (1 / 3750000) * specialluckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'In im table ?!?!?');
           const invData = {
@@ -1728,7 +1728,7 @@
         }
 
         // cali 1/10,000,000 (only if availability unlocked)
-        if (availabilityUnlocked && Math.random() < (1 / 10000000) * specialLuckBonus) {
+        if (availabilityUnlocked && Math.random() < (1 / 10000000) * specialluckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'cali');
           const invData = {
@@ -1850,14 +1850,14 @@
         let rank = '';
         let displayValue = baseValue;
 
-        if (Math.random() < 1 / 98900 * specialLuckBonus) { 
+        if (Math.random() < 1 / 98900 * specialluckBonus) { 
           rank = 'INSANE'; 
           displayValue = 0.989; 
           originalValue = 0.989;
           isSpecial = true;
           markDiscovered('specialRanks', 'INSANE');
         }
-        else if (Math.random() < 1 / 15000 * specialLuckBonus) { 
+        else if (Math.random() < 1 / 15000 * specialluckBonus) { 
           rank = 'Lmao'; 
           displayValue = 0.1;
           originalValue = 0.1;
@@ -1870,7 +1870,7 @@
           isSpecial = true;
           markDiscovered('specialRanks', 'PERFECTIONIST');
         }
-        else if (Math.random() < 1 / 88888 * specialLuckBonus) { 
+        else if (Math.random() < 1 / 88888 * specialluckBonus) { 
           rank = "Imaginary"; 
           displayValue = "0.1i";
           originalValue = 0.1;
@@ -1895,14 +1895,14 @@
           rank = 'nothing';
           markDiscovered('ranks', 'nothing');
         }
-        else if (Math.random() < 1 / 690000 * specialLuckBonus) { 
+        else if (Math.random() < 1 / 690000 * specialluckBonus) { 
           rank = 'NICE';
           displayValue = 69;
           originalValue = 69;
           isSpecial = true;
           markDiscovered('specialRanks', 'NICE');
         }
-        else if (Math.random() < 1 / 6942000 * specialLuckBonus) { 
+        else if (Math.random() < 1 / 6942000 * specialluckBonus) { 
           rank = 'FUNNY';
           displayValue = 69420;
           originalValue = 69420;
@@ -1910,7 +1910,7 @@
           markDiscovered('specialRanks', 'FUNNY');
         }
         else if (absBaseValue < 5) {
-          if (Math.random() < 1 / 3333333 * specialLuckBonus) { 
+          if (Math.random() < 1 / 3333333 * specialluckBonus) { 
             rank = 'Common : DIVINITY'; 
             displayValue *= 5e5;
             isSpecial = true;
@@ -1955,7 +1955,7 @@
         else if (absBaseValue < 1e150) { rank = 'what.'; markDiscovered('ranks', 'what.'); }
         else { rank = 'FINALE'; markDiscovered('ranks', 'FINALE'); }
 
-        if (Math.random() < (1 / 27630 * specialLuckBonus) {
+        if (Math.random() < (1 / 27630 * specialluckBonus) {
           isSpecial = true;
           rank = 'leaflet';
           displayValue = 2763;
