--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
             });
           } else if (rand < 1/10 + 1/100) {
             // Special Booster
-            const multiplier = Math.pow(Math.random(), -2);
+            const multiplier = Math.pow(Math.random(), -2.5);
             const cost = Math.floor(Math.pow(multiplier, 1.25));
             merchantStock.push({
               name: 'Special Booster',
@@ -741,7 +741,7 @@
             });
           } else {
             // Regular Booster
-            const multiplier = Math.pow(Math.random(), -2);
+            const multiplier = Math.pow(Math.random(), -2.5);
             const cost = Math.floor(Math.pow(multiplier, 1.25));
             merchantStock.push({
               name: 'Booster',
@@ -1623,7 +1623,7 @@
         }
 
         // Everlasting 1/575,765,100
-        if (Math.random() < (1 / 575765100) * specialluckBonus) {
+        if (Math.random() < (1 / 575765100) * specialLuckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'Everlasting');
           const invData = {
@@ -1649,7 +1649,7 @@
         }
 
         // Legacy FINALE 1/75,000,000
-        if (Math.random() < (1 / 75000000) * specialluckBonus) {
+        if (Math.random() < (1 / 75000000) * specialLuckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'Legacy FINALE');
           const invData = {
@@ -1662,12 +1662,12 @@
         }
 
         // <(ETERNAL DAWN)> 1/77,777,777
-        if (Math.random() < (1 / 77777777) * specialluckBonus) {
+        if (Math.random() < (1 / 77777777) * specialLuckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', '<(ETERNAL DAWN)>');
           const invData = {
             variants: '',
-            displayValue: '-777,777,777.78',
+            displayValue: '-777,777,777.77',
             rank: '<(ETERNAL DAWN)>',
             color: 'purple'
           };
@@ -1675,7 +1675,7 @@
         }
 
         // Catastrophic 1/3906250
-        if (Math.random() < (1 / 3906250) * specialluckBonus) {
+        if (Math.random() < (1 / 3906250) * specialLuckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'Catastrophic');
           const invData = {
@@ -1688,7 +1688,7 @@
         }
 
         // In im table ?!?!? 1/3.75m
-        if (Math.random() < (1 / 3750000) * specialluckBonus) {
+        if (Math.random() < (1 / 3750000) * specialLuckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'In im table ?!?!?');
           const invData = {
@@ -1701,7 +1701,7 @@
         }
 
         // ???UNKNOWN??? 1/1234567 - NO COOLDOWN
-        if (Math.random() < (1 / 1234567) * specialluckBonus) {
+        if (Math.random() < (1 / 1234567) * specialLuckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', '???UNKNOWN???');
           const invData = {
@@ -1728,7 +1728,7 @@
         }
 
         // cali 1/10,000,000 (only if availability unlocked)
-        if (availabilityUnlocked && Math.random() < (1 / 10000000) * specialluckBonus) {
+        if (availabilityUnlocked && Math.random() < (1 / 10000000) * specialLuckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'cali');
           const invData = {
@@ -1850,14 +1850,14 @@
         let rank = '';
         let displayValue = baseValue;
 
-        if (Math.random() < 1 / 98900 * specialluckBonus) { 
+        if (Math.random() < 1 / 98900 * specialLuckBonus) { 
           rank = 'INSANE'; 
           displayValue = 0.989; 
           originalValue = 0.989;
           isSpecial = true;
           markDiscovered('specialRanks', 'INSANE');
         }
-        else if (Math.random() < 1 / 15000 * specialluckBonus) { 
+        else if (Math.random() < 1 / 15000 * specialLuckBonus) { 
           rank = 'Lmao'; 
           displayValue = 0.1;
           originalValue = 0.1;
@@ -1870,7 +1870,7 @@
           isSpecial = true;
           markDiscovered('specialRanks', 'PERFECTIONIST');
         }
-        else if (Math.random() < 1 / 88888 * specialluckBonus) { 
+        else if (Math.random() < 1 / 88888 * specialLuckBonus) { 
           rank = "Imaginary"; 
           displayValue = "0.1i";
           originalValue = 0.1;
@@ -1895,14 +1895,14 @@
           rank = 'nothing';
           markDiscovered('ranks', 'nothing');
         }
-        else if (Math.random() < 1 / 690000 * specialluckBonus) { 
+        else if (Math.random() < 1 / 690000 * specialLuckBonus) { 
           rank = 'NICE';
           displayValue = 69;
           originalValue = 69;
           isSpecial = true;
           markDiscovered('specialRanks', 'NICE');
         }
-        else if (Math.random() < 1 / 6942000 * specialluckBonus) { 
+        else if (Math.random() < 1 / 6942000 * specialLuckBonus) { 
           rank = 'FUNNY';
           displayValue = 69420;
           originalValue = 69420;
@@ -1910,7 +1910,7 @@
           markDiscovered('specialRanks', 'FUNNY');
         }
         else if (absBaseValue < 5) {
-          if (Math.random() < 1 / 3333333 * specialluckBonus) { 
+          if (Math.random() < 1 / 3333333 * specialLuckBonus) { 
             rank = 'Common : DIVINITY'; 
             displayValue *= 5e5;
             isSpecial = true;
@@ -1955,7 +1955,7 @@
         else if (absBaseValue < 1e150) { rank = 'what.'; markDiscovered('ranks', 'what.'); }
         else { rank = 'FINALE'; markDiscovered('ranks', 'FINALE'); }
 
-        if (Math.random() < (1 / 27630 * specialluckBonus) {
+        if (Math.random() < (1 / 27630 * specialLuckBonus) {
           isSpecial = true;
           rank = 'leaflet';
           displayValue = 2763;
