--- a/index.html
+++ b/index.html
@@ -1955,7 +1955,7 @@
         else if (absBaseValue < 1e150) { rank = 'what.'; markDiscovered('ranks', 'what.'); }
         else { rank = 'FINALE'; markDiscovered('ranks', 'FINALE'); }
 
-        if (Math.random() < (1 / 27630 * specialLuckBonus) {
+        if (Math.random() < (1 / 27630 * specialLuckBonus)) {
           isSpecial = true;
           rank = 'leaflet';
           displayValue = 2763;
