--- a/index.html
+++ b/index.html
@@ -1597,7 +1597,7 @@
         }
 
         // RNGarbage 1/15,629,519
-        if (Math.random() < (1 / 15629519) * specialluckBonus) {
+        if (Math.random() < (1 / 15629519) * specialLuckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'RNGarbage');
           const invData = {
@@ -1610,7 +1610,7 @@
         }
 
         // RNGod 1/50,000,000
-        if (Math.random() < (1 / 1000000) * specialluckBonus) {
+        if (Math.random() < (1 / 1000000) * specialLuckBonus) {
           isSpecial = true;
           markDiscovered('specialRanks', 'RNGod');
           const invData = {
