--- a/index.html
+++ b/index.html
@@ -1560,6 +1560,7 @@
         if (value < 1e63) return 'linear-gradient(90deg, blue, cyan, blue, cyan)';
         if (value < 1e66) return 'linear-gradient(90deg, red, orange, red, orange)';
         if (value < 1e69) return 'linear-gradient(90deg, pink, white, pink, white)';
+        if (value < 1e72) return 'linear-gradient(150deg, green, orange, red)';
         return 'linear-gradient(90deg, red, orange, yellow, green, cyan, blue, violet)';
       }
 
