--- a/index.html
+++ b/index.html
@@ -2138,7 +2138,7 @@
         multiRolls = [];
         totalRolls++;
         saveAll();
-        const roll = rollOnce(10, 10, 100000 * secretLuckBonus);
+        const roll = rollOnce(10, 10, 1000000 * secretLuckBonus);
         multiRolls.push(roll.inventoryData);
         
         let displayResult = roll.result.replace(/ROLLINDEX/g, '0').replace(/RANKBUTTON/g, roll.inventoryData ? 
