--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
               merchantStock.push({
                 name: 'Undetermined',
                 cost: 6666,
-                description: '1/66.66 to roll "NULL", 1/6.66 to be consumed',
+                description: 'No description available',
                 type: 'undetermined'
               });
               continue;
