--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
               merchantStock.push({
                 name: 'DEV ITEM',
                 cost: 1,
-                description: 'Forces "Lmao"',
+                description: 'DONT USE; TESTING PURPOSES ONLY',
                 type: 'devItem'
               });
               continue;
